<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/orderList"
        android:title="@string/orderListPl"
        android:icon="@drawable/list_order_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/saveCart"
        android:title="@string/saveCartPl"
        android:icon="@drawable/save_cart_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/aboutPl"
        android:icon="@drawable/about_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/shareCart"
        android:title="@string/shareCartPl"
        android:icon="@drawable/share_cart_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sendSms"
        android:title="@string/sendSmsPl"
        android:icon="@drawable/send_sms_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/changeLan"
        android:title="@string/changeLanPl"
        android:icon="@drawable/change_lan_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/saveState"
        android:title="@string/saveStatePl"
        android:icon="@drawable/save_state_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/loadState"
        android:title="@string/loadStatePl"
        android:icon="@drawable/load_state_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/registerOpt"
        android:title="@string/createAccPl"
        android:icon="@drawable/register_opt_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clearSavedState"
        android:title="@string/clearSavedStatePl"
        android:icon="@drawable/register_opt_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sendMail"
        android:title="@string/sendMailPl"
        android:icon="@drawable/send_mail_icon"
        app:showAsAction="never"/>


</menu>