<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/pink100">
    <ImageView
        android:id="@+id/arrowBackLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/arrow_back"
        app:tint="@color/purple300" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/circular2"
        android:padding="20dp"
        android:layout_marginBottom="30dp">
        <TextView
            android:id="@+id/labelLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logInLabelEn"
            android:textSize="24sp"
            android:fontFamily="casual"
            android:textColor="@color/pink400"
            android:textAlignment="center"/>
        <LinearLayout
            android:id="@+id/logLay"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/loginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loginLoginEn"
                android:textColor="@color/pink400"
                />
            <EditText
                android:id="@+id/loginInput"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginHintLoginEn"
                android:backgroundTint="@color/pink300"
                android:textColorHint="@color/pink300"
                android:textColor="@color/pink300"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pasLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/passLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passwordLoginEn"
                android:textColor="@color/pink400"/>
            <EditText
                android:id="@+id/passInput"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passHintLoginEn"
                android:backgroundTint="@color/pink300"
                android:textColorHint="@color/pink300"
                android:textColor="@color/pink300"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rePassLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/rePassLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rePasswordLoginEn"
                android:textColor="@color/pink400"/>
            <EditText
                android:id="@+id/rePassInput"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rePassHintLoginEn"
                android:backgroundTint="@color/pink300"
                android:textColorHint="@color/pink300"
                android:textColor="@color/pink300"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/butLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            >
            <Button
                android:id="@+id/butTog"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toRegisterButEn"
                android:textColor="@color/purple100"
                android:backgroundTint="@color/pink400"/>
            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/butCon"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple100"
                android:backgroundTint="@color/pink400"
                android:text="@string/logInButEn"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>