<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple200">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
        <LinearLayout
            android:id="@+id/pcCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/toolbar"
            android:background="@drawable/circular"
            android:padding="20dp"
            android:backgroundTint="@color/pink100"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PC"
                android:textAlignment="center"
                android:textSize="25sp"
                android:fontFamily="casual"
                android:textColor="@color/purple400"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/pcImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pc1" />
                <Spinner

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/pcSpinner" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/extraCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/circular"
            android:padding="20dp"
            android:backgroundTint="@color/pink100"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/pcCard"
            >
            <TextView
                android:id="@+id/extraLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extraPl"
                android:textAlignment="center"
                android:textSize="25sp"
                android:fontFamily="casual"
                android:textColor="@color/purple400"
                android:layout_marginBottom="15dp"
                />
            <CheckBox
                android:id="@+id/mouseCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouseCheckPl"
                android:fontFamily="casual"
                android:textColor="@color/pink400"
                android:buttonTint="@color/pink400"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:id="@+id/mouseImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pc1" />
                <Spinner

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/mouseSpinner" />
            </LinearLayout>
            <CheckBox
                android:id="@+id/keyboardCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyboardCheckPl"
                android:fontFamily="casual"
                android:textColor="@color/pink400"
                android:buttonTint="@color/pink400"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:id="@+id/keyboardImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pc1" />
                <Spinner

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/keyboardSpinner" />
            </LinearLayout>
            <CheckBox
                android:id="@+id/cameraCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cameraCheckPl"
                android:fontFamily="casual"
                android:textColor="@color/pink400"
                android:buttonTint="@color/pink400"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="0dp"
                >
                <ImageView
                    android:id="@+id/cameraImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pc1" />
                <Spinner

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/cameraSpinner" />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/finaleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/circular"
            android:padding="20dp"
            android:backgroundTint="@color/pink100"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/extraCard"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    
                    <TextView
                        android:id="@+id/cenaTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/priceLabelPl"
                        android:textAlignment="viewStart"
                        android:textSize="25sp"
                        android:fontFamily="casual"
                        android:textColor="@color/purple400"
                        android:layout_marginBottom="0dp"
                        />
                    
                    <TextView
                        android:id="@+id/finPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/defPrice"
                        android:textSize="20sp"
                        android:layout_marginTop="4dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/orderBut"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/orderButPl"
                    android:fontFamily="casual"
                    android:textSize="25sp"
                    android:layout_gravity="end|center_vertical"
                    android:backgroundTint="@color/pink400"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu"
        android:background="@color/pink100"/>
</androidx.drawerlayout.widget.DrawerLayout>